long device inventory texts are no longer cut off + visible on hover
Changelog: Title

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1412,6 +1412,11 @@ tr.expand {
   opacity: 1;
 }
 
+.inventory-text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .grouplist div span {
   font-size: 0.9rem;
 }
